--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.7.0"
   },
   "scripts": {
-    "server": "nodemon src/server.js --ext js --exec babel-node"
+    "server": "nodemon src/server.js --ext js --exec babel-node",
+    "deploy": "NODE_ENV=production babel-node src/server.js"
   }
 }
