--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "server": "cd backend && yarn server",
     "install:prod": "cd frontend && yarn install --freeze-lockfile && cd ../backend && yarn install --freeze-lockfile",
     "build": "cd frontend && yarn build",
-    "deploy": "cd backend && yarn server"
+    "deploy": "cd backend && yarn deploy"
   }
 }
