--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   },
@@ -21,6 +22,6 @@
   },
   "scripts": {
     "server": "nodemon src/server.js --ext js --exec babel-node",
-    "deploy": "NODE_ENV=production babel-node src/server.js"
+    "deploy": "cross-env NODE_ENV=production babel-node src/server.js"
   }
 }
